fix: increase gap between book covers

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -205,11 +205,11 @@ article.max-width-90 {
   display: flex;
   flex-wrap: wrap;
   padding: 0;
-  gap: var(--space-2xs);
+  gap: var(--space-s);
 }
 
 @media screen and (max-width: 455px) {
-  .bookshelf:not(.gaming) {
+  .bookshelf {
     justify-content: center;
   }
 }
